--- a/backend/radioco/main/templates/main/snippets/elements/spanish_flag.html
+++ b/backend/radioco/main/templates/main/snippets/elements/spanish_flag.html
@@ -1,1 +1,2 @@
+{% load static %}
 <img alt="Spanish Language" title="Spanish Language" class="flag" src="{% static 'main/images/flags/es.avif' %}">
