--- a/backend/radioco/main/templates/main/base.html
+++ b/backend/radioco/main/templates/main/base.html
@@ -1,4 +1,4 @@
-{% load i18n static %}
+{% load i18n compress static %}
 
 {% get_available_languages as languages %}
 {% get_current_language as LANGUAGE_CODE %}
@@ -13,7 +13,6 @@
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900,700,300,300italic" as="style" type='text/css' crossorigin="anonymous">
     <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" as="style" crossorigin="anonymous">
     <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" as="style" crossorigin="anonymous">
-    <link rel="preload" href="{% static 'main/css/main.css' %}" as="style">
     <link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v11/6xKydSBYKcSV-LCoeQqfX1RYOo3ig4vwlxdu3cOWxw.woff2" as="font" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v11/6xKydSBYKcSV-LCoeQqfX1RYOo3iu4nwlxdu3cOWxw.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v11/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7lujVj9w.woff2" as="font" type="font/woff2" crossorigin>
@@ -45,7 +44,10 @@
     <!--<link rel='stylesheet' id='illdy-custom-css'-->
           <!--href='http://radioco.org/wp-content/themes/illdy/layout/css/custom.min.css?ver=4.7.9' type='text/css'-->
           <!--media='all'/>-->
+    
+    {% compress css %}
     <link href="{% static 'main/css/main.css' %}" rel="stylesheet" type="text/css"/>
+    {% endcompress %}
 
     <!--<link rel='stylesheet' id='jetpack_css-css'-->
           <!--href='http://radioco.org/wp-content/plugins/jetpack/css/jetpack.css?ver=4.7.1' type='text/css' media='all'/>-->
@@ -54,9 +56,10 @@
             <!--crossorigin="anonymous"></script>-->
 
     <script defer
-  src="http://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
+        src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+
     <!--<script defer type="text/javascript">-->
         <!--/* <![CDATA[ */-->
         <!--var CrayonSyntaxSettings = {-->
@@ -117,22 +120,6 @@
         <!--background-color: #ffffff;-->
     <!--}</style>&lt;!&ndash; -->
 
-    <!-- Tracking code easily added by NK Google Analytics -->
-    <script async type="text/javascript">
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-15717007-3', 'radioco.org');
-        ga('send', 'pageview');
-    </script>
 </head>
 <body class="home page-template-default page page-id-298 wp-custom-logo">
 
@@ -169,10 +156,12 @@
 
 <!--<script defer type="text/javascript"-->
         <!--src='http://radioco.org/wp-content/themes/illdy/layout/js/owl-carousel/owl-carousel.min.js?ver=2.0.0'></script>-->
+{% compress js %}
 <script defer type="text/javascript" src="{% static 'main/js/count-to/count-to.min.js' %}"></script>
 <script defer type="text/javascript" src="{% static 'main/js/visible/visible.min.js' %}"></script>
 <script defer type="text/javascript" src="{% static 'main/js/plugins.min.js' %}"></script>
 <script defer type="text/javascript" src="{% static 'main/js/scripts.js' %}"></script>
+{% endcompress %}
 <!--<script defer type="text/javascript" src='http://radioco.org/wp-includes/js/wp-embed.min.js?ver=4.7.9'></script>-->
 <!--<script defer type="text/javascript" src='//www.google.com/recaptcha/api.js?render=explicit&#038;ver=2.0'></script>-->
 <!--<script defer type="text/javascript"-->
