--- a/backend/radioco/main/templates/main/snippets/footer.html
+++ b/backend/radioco/main/templates/main/snippets/footer.html
@@ -4,7 +4,7 @@
 <footer id="footer">
     <div class="container">
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-sm-4">
                 <div id="text-9" class="widget widget_text">
                     <div class="widget-title"><h3>{% trans "INFORMATION" %}</h3></div>
                     <div class="textwidget">
@@ -23,21 +23,9 @@
                         <a href="https://twitter.com/radioco_org" target="_blank" title="Twitter" rel="noopener"> <i
                                 class="fab fa-twitter-square fa-2x"></i></a></div>
                 </div>
-            </div><!--/.col-sm-3-->
-            <div class="col-sm-3">
-                <div id="text-11" class="widget widget_text">
-                    <div class="widget-title"><h3>{% trans "DONATE" %}</h3></div>
-                    <div class="textwidget">{% trans "Donate to support our effort in developing free and open source software." %}
-                        <br><br>
-
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=KT43SLHW9H872">
-                            <img src="{% static 'main/images/donate.gif' %}"
-                                 alt="Donate Button with Credit Cards" data-recalc-dims="1">
-                        </a></div>
-                </div>
-            </div><!--/.col-sm-3-->
-            <div class="col-sm-3">
-                <div id="text-5" class="widget widget_text">
+            </div><!--/.col-sm-4-->
+            <div class="col-sm-4">
+                <div id="text-5" class="widget widget_text text-center">
                     <div class="widget-title"><h3>{% trans "LICENSE" %}</h3></div>
                     <div class="textwidget"><p><a href="http://creativecommons.org/licenses/by/4.0/"><img
                             alt="Creative Commons License"
@@ -51,8 +39,8 @@
                         </p>
                     </div>
                 </div>
-            </div><!--/.col-sm-3-->
-            <div class="col-sm-3">
+            </div><!--/.col-sm-4-->
+            <div class="col-sm-4 text-right">
                 <a href="http://radioco.org/home" title="RadioCo" class="footer-logo"><img
                         src="{% static 'main/images/radioco_80.avif' %}" alt="RadioCo"
                         title="RadioCo"/></a>
@@ -63,7 +51,7 @@
                     </span>
                 </p>
                 <span>{% trans "Project" %}: RadioCo.</span>
-            </div><!--/.col-sm-3-->
+            </div><!--/.col-sm-4-->
         </div><!--/.row-->
     </div><!--/.container-->
 </footer><!--/#footer-->
