--- a/backend/radioco/main/templates/main/about.html
+++ b/backend/radioco/main/templates/main/about.html
@@ -47,15 +47,8 @@
                         {% endblocktrans %}
                     </p>
                     <p>
-                        {% trans "Help us translate RadioCo into your language!" %}
+                        <a href="https://github.com/iago1460/radioco-web" title="GitHub">GitHub</a>
                     </p>
-                    <a href="https://poeditor.com/join/project/wc3P8dCind" target="_blank" title="Help Translate" rel="noopener">
-                        {% trans "Official Website" %}
-                    </a>
-                    |
-                    <a href="https://poeditor.com/join/project/Ofdy6SyZwI" target="_blank" title="Help Translate" rel="noopener">
-                        {% trans "RadioCo project" %}
-                    </a>
                 </div>
             </div>
         </div>
